# Jeru

./: README.md  pyproject.toml
jeru/: base.py  models.py
jeru/blueprints/: __init__.py
jeru/blueprints/auth/: controllers.py  http_auth.py  routes.py
jeru/blueprints/product/: controllers.py  routes.py
jeru/ext/api/: __init__.py
jeru/ext/api/auth/: controllers.py  routes.py
jeru/ext/db/: __init__.py  commands.py  models.py
jeru/ext/http_auth/: __init__.py  jwt_utils.py
jeru/jobs/: celery_app.py  enxuto_prod.csv  higa_prod.csv  prices_crawler.py  utils.py
tests/: test_product.py
tests/integration/: __init__.py
tests/unit/: test_auth.py  test_product.py
