[tool.poetry]
name = "jeru"
version = "0.1.0"
description = "Price comparator of Supermarket Products"
authors = ["Victor Pereira"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"
Flask-CLI = "^0.4.0"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
